BACKLOG-23570 Fixed wrap styling on Tabs

--- a/src/components/Tab/Tab.scss
+++ b/src/components/Tab/Tab.scss
@@ -3,4 +3,5 @@
     flex-direction: row;
     width: max-content;
     padding: var(--spacing-nano) var(--spacing-small) 0 var(--spacing-small);
+    flex-wrap: nowrap;
 }
